fix handling of SAFEARRAY(s) returned as variant in olebridge (fdo#38441)