extensions/source/ole/unoconversionutilities.hxx
@@ -134,7 +134,7 @@ public:
     /** @exception com.sun.star.lang.IllegalArgumentException
         If rSeq does not contain a sequence then the exception is thrown.
     */
-    SAFEARRAY*  createUnoSequenceWrapper(const Any& rSeq);
+    VARTYPE createUnoSequenceWrapper(const Any& rSeq, SAFEARRAY*& pOutArray );
     /** @exception com.sun.star.lang.IllegalArgumentException
         If rSeq does not contain a sequence or elemtype has no proper value
         then the exception is thrown.
@@ -779,11 +779,12 @@ void UnoConversionUtilities<T>::anyToVariant(VARIANT* pVariant, const Any& rAny)
         }
         case TypeClass_SEQUENCE:        // sequence ??? SafeArray descriptor
         {
-            SAFEARRAY* pArray = createUnoSequenceWrapper(rAny);
-            if (pArray)
+            SAFEARRAY* pOutArray = NULL;
+            VARTYPE eArrayType = createUnoSequenceWrapper(rAny, pOutArray );
+            if (pOutArray)
             {
-                V_VT(pVariant) = VT_ARRAY | VT_VARIANT;
-                V_ARRAY(pVariant) = pArray;
+                V_VT(pVariant) = VT_ARRAY | eArrayType;
+                V_ARRAY(pVariant) = pOutArray;
             }
             else
             {
@@ -1295,9 +1296,8 @@ void  UnoConversionUtilities<T>::getElementCountAndTypeOfSequence( const Any& rS
 
 
 template<class T>
-SAFEARRAY*  UnoConversionUtilities<T>::createUnoSequenceWrapper(const Any& rSeq)
+VARTYPE UnoConversionUtilities<T>::createUnoSequenceWrapper(const Any& rSeq,  SAFEARRAY*& pArray)
 {
-    SAFEARRAY* pArray = NULL;
     sal_uInt32 n = 0;
 
     if( rSeq.getValueTypeClass() != TypeClass_SEQUENCE )
@@ -1361,7 +1361,7 @@ SAFEARRAY*  UnoConversionUtilities<T>::createUnoSequenceWrapper(const Any& rSeq)
 
     TYPELIB_DANGER_RELEASE( pSeqElementDesc);
 
-    return pArray;
+    return eTargetElementType;
 }
 
 /* The argument rObj can contain
